# CaiLama-Master

./: .gitignore  2026-05-29.router-console-alignment.plan.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  hinweise.md  kimi-followup.plan.md  master-repo-orchestration.plan.md  project.check.md  run_ocr_live_benchmark.sh  status.plan.cailama.md
CaiLama-Origin-API/: Dockerfile  README.md  pyproject.toml
CaiLama-Origin-API/docs/: security.md
CaiLama-Origin-API/src/cailama_origin/: __init__.py  auth.py  jobs.py  main.py
CaiLama-Origin-API/tests/: test_auth.py  test_jobs.py  test_main.py
docs/: benchmarks.md  db-api.plan.md  ecosystem-map.md  ecosystem-reference.md  handoff-session-2026-05-23.md  integrations.md  local-setup.md  orchestration.md  product-positioning.md  quality.md  roadmap.md  runtime-projects.md  web-app.md  web-app.plan.md  web-console-parity.md  website.md
scripts/: benchmark_feedback_agent.py  check-ecosystem.sh  deploy-website.sh  export_benchmark_model_tables.py  generate-console-profile-key.sh  generate-web-api-keys.sh  install-console-profile-key.sh  refuse-console-profile-key.sh  run_benchmark_smoke.py  setup-webspace-db-api.sh  update-runtime-projects.sh
web/: .htaccess  _private_api.php  _private_app.php  account.php  app-api.php  app-status.php  app.php  architecture.html  architecture.php  benchmark-feedback-item.php  benchmark-feedback-results.php  benchmark-feedback.php  ecosystem-reference.md  index.html  index.php  llms.txt  login.php  logout.php  operations.html  (+10 more)
web-smarty/: README.md  bootstrap.php  composer.json
(+81 files in other folders)
